<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    <string name="cally">hi</string>
    <string name="title_main_activity">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_calendar">View Calendar</string>
    <string name="edit_message">Edit Text</string>
    <string name="you_clicked_it">You clicked it!</string>
    <string name="action_new">New Action</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="landscape">THIS IS THE LANDSCAPE VIEW</string>
    <string name="january">January</string>
    <string name="feburary">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="someYearsArray">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string-array name="monthsArray">
        <item>January</item>
        <item>Feburary</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Decmeber</item>
    </string-array>
    <string-array name="feburaryDaysArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
    <string-array name="leapFeburaryDaysArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
    </string-array>
    <string-array name="thirtyDaysArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="thirtyOneDaysArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
	<string-array name="hoursArray">
	    <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
	</string-array>
	<string-array name="amPmArray">
        <item>AM</item>
        <item>PM</item>
	</string-array>
	<string-array name="minutesArray">
	    <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>Other</item>
	</string-array>
	<string-array name="tagsArray">
        <item>Add</item>
	</string-array>
</resources>
