<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calendar.ViewCalendar"
    android:orientation="vertical"
    android:id="@+id/viewCalendarLayout" >

    <TextView android:id="@+id/txt_view_calendar"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_view_calendar" />
    	        	       
			<GridLayout
		        android:id="@+id/calendarGrid"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:columnCount="7"
		        android:rowCount="5">
			    
			     <TextView
	    	        android:id="@+id/sundaytxt"
	    	        android:text="@string/sunday"
	    	        android:layout_row="0"
    	        	android:layout_column="0"
    	        	android:background="#3399FF"
    	        	/>
			    
			    <TextView   
    	     	   android:id="@+id/mondaytxt"    	        
    	        	android:text="@string/monday"
    	        	android:layout_row="0"
    	        	android:layout_column="1"
    	        	android:background="#99CCFF"/>
			    
			    <TextView   
    	        	android:id="@+id/tuesdaytxt"
    	        	android:text="@string/tuesday"
					android:layout_row="0"
    	        	android:layout_column="2"
    	        	android:background="#CC99FF"/>
			    			    
			    <TextView   
    	  	      	android:id="@+id/wednesdaytxt"    	        
    	        	android:text="@string/wednesday"
					android:layout_row="0"
    	        	android:layout_column="3"
    	        	android:background="#FF66CC"/>		
    	        		    
			    <TextView   
    	        	android:id="@+id/thursdaytxt"    	        
    	       		android:text="@string/thursday"
					android:layout_row="0"
    	        	android:layout_column="4"
    	        	android:background="#FF6666"/>
			    			    
			    <TextView   
    	        	android:id="@+id/fridaytxt"    	        
    	        	android:text="@string/friday"
					android:layout_row="0"
    	        	android:layout_column="5"
    	        	android:background="#FF9933"/>		    
			    
			    <TextView  
    	        	android:id="@+id/saturdaytxt"            
    	        	android:text="@string/saturday"
					android:layout_row="0"
    	        	android:layout_column="6"
    	        	android:background="#CCFF33"/>			        
			    
			    <!-- <fragment 
			        android:name="com.example.calendar"
			        android:id="@+id/taskr1c0"
			        android:layout_row="1"
			        android:layout_column="0"
			        />-->"
			    
			</GridLayout> 
</LinearLayout>
